# embedded

./: .gitignore  README.md  diagnostics.py  mavlink_test.py  triggers.py
ANYESC I2C/: platformio.ini
ANYESC I2C/src/: main.cpp
ESP32S3 UART/: platformio.ini
ESP32S3 UART/src/: main.cpp
RP2040 I2C Central/: platformio.ini
RP2040 I2C Central/src/: main.cpp
anyesc/: platformio.ini
anyesc-pwm/src/: main.cpp
anyesc-uart/src/: main.cpp
anyesc/src/: main.cpp  main.cpp.bkp  main.cpp.bkp2  test.cpp.bkp
esp32 DS18B20/: platformio.ini
esp32 DS18B20/src/: main.cpp
mascp-pico/: platformio.ini
mascp-pico/src/: main.cpp
mascp-rs/: Cargo.toml  rust-toolchain.toml
mascp-rs/.cargo/: config.toml
mrx-scripts/: mascp.lua
simpleFOC/: platformio.ini
src/: main.cpp
