[package]
name = "mascp"
version = "0.1.0"
edition = "2021"


[dependencies]
panic-probe = "0.3.1"
cortex-m-rt = "0.7.0"
defmt-rtt = "0.4.0"
fixed = "1.24.0"

[dependencies.embassy-rp]
version = "0.1.0"
features = ["defmt", "unstable-traits", "nightly", "unstable-pac", "time-driver", "critical-section-impl"]

[dependencies.embassy-executor]
version = "0.2.0"
features = ["nightly", "arch-cortex-m", "executor-thread", "executor-interrupt", "defmt", "integrated-timers"]

[dependencies.embassy-time]
version = "0.1.2"

[dev-dependencies]
elf2uf2-rs = "1.3.0"
flip-link = "0.1.0"


[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy", rev = "c1da2c0219667085124c47d8059ffbf077adaf9d" }
embassy-time = { git = "https://github.com/embassy-rs/embassy", rev = "c1da2c0219667085124c47d8059ffbf077adaf9d" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy", rev = "c1da2c0219667085124c47d8059ffbf077adaf9d" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy", rev = "c1da2c0219667085124c47d8059ffbf077adaf9d" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy", rev = "c1da2c0219667085124c47d8059ffbf077adaf9d" }


[profile.dev]
debug = 2
debug-assertions = true
opt-level = 1
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false